#230 Fix findings from review.